add scouting config
